--- a/appveyor.yml
+++ b/appveyor.yml
@@ -93,7 +93,7 @@ environment:
       --target=i586-pc-windows-msvc
       --enable-full-tools
       --enable-profiler
-    SCRIPT: python x.py dist
+    SCRIPT: python x.py dist -vv
     DIST_REQUIRE_ALL_TOOLS: 1
     DEPLOY: 1
     CI_JOB_NAME: dist-i686-msvc
